<?xml version="1.0"?>
<package format="2">
  <name>open_manipulator_evk_gazebo</name>
  <version>1.0.0</version>
  <description>
    The open_manipulator_evk_gazebo package
    This package is based on the package below.
    https://github.com/ROBOTIS-GIT/open_manipulator_simulations/tree/master/open_manipulator_gazebo
    We modified the package to make the simulated arm trace the real-robot feedback.
</description>

  <maintainer email="renesas@todo.todo">Renesas</maintainer>

  <license>Apache 2.0</license>
  <author email="thlim@robotis.com">Darby Lim</author>
  <author email="hjkim@robotis.com">Hye-Jong KIM</author>
  <author email="jhshim@robotis.com">Ryan Shim</author>
  <author email="yhna@robotis.com">Yong-Ho Na</author>
  <maintainer email="pyo@robotis.com">Pyo</maintainer>
  <maintainer email="hjkim@robotis.com">Hye-Jong KIM</maintainer>
  <url type="website">http://wiki.ros.org/open_manipulator_gazebo</url>
  <url type="emanual">http://emanual.robotis.com/docs/en/platform/openmanipulator</url>
  <url type="repository">https://github.com/ROBOTIS-GIT/open_manipulator_simulations</url>
  <url type="bugtracker">https://github.com/ROBOTIS-GIT/open_manipulator_simulations/issues</url>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>gazebo_ros</depend>
  <depend>gazebo_ros_control</depend>
  <depend>controller_manager</depend>
  <depend>xacro</depend>
  <depend>urdf</depend>

  <export>
    <gazebo_ros plugin_path="${prefix}/lib" gazebo_media_path="${prefix}" gazebo_model_path="${prefix}/models"/>

  </export>
</package>
