<?xml version="1.0"?>
<package format="2">
  <name>open_manipulator_evk_joint_controller</name>
  <version>1.0.0</version>
  <description>The open_manipulator_evk_joint_controller package</description>

  <maintainer email="renesas@todo.todo">Renesas</maintainer>

  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

</package>
