<?xml version="1.0"?>
<package format="2">
  <name>open_manipulator_evk_moveit</name>
  <version>1.0.0</version>
  <description>
  The open_manipulator_evk_moveit package
  This package is based on the package below.
  https://github.com/ROBOTIS-GIT/open_manipulator/tree/master/open_manipulator_moveit
  We modified the package to customize configurations for this demonstration.
  </description>

  <maintainer email="renesas@todo.todo">Renesas</maintainer>

  <license>Apache 2.0</license>
  <author email="thlim@robotis.com">Darby Lim</author>
  <author email="hjkim@robotis.com">Hye-Jong KIM</author>
  <author email="jhshim@robotis.com">Ryan Shim</author>
  <author email="yhna@robotis.com">Yong-Ho Na</author>
  <maintainer email="pyo@robotis.com">Pyo</maintainer>
  <maintainer email="hjkim@robotis.com">Hye-Jong KIM</maintainer>
  <url type="website">http://wiki.ros.org/open_manipulator_moveit</url>
  <url type="emanual">http://emanual.robotis.com/docs/en/platform/openmanipulator</url>
  <url type="repository">https://github.com/ROBOTIS-GIT/open_manipulator</url>
  <url type="bugtracker">https://github.com/ROBOTIS-GIT/open_manipulator/issues</url>
  <buildtool_depend>catkin</buildtool_depend>

</package>
